BF: images path made relative

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="nowtv">
 <div class="header">
-    <img class="logo" src="/images/nowtv-logo.png" />
+    <img class="logo" src="images/nowtv-logo.png" />
     <div class="account">
         <a class="account__actions">Log in/sign up</a>
         <a>Help</a>
